# crowing

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/jg/crowing/: __init__.py  cli.py  errors.py  fetching.py  models.py  parsing.py  rendering.py  urls.py  writing.py
src/jg/crowing/assets/: Kicking It - Dyalla.m4a  slideshow-moire-main-version-02-01-15390.m4a
tests/: conftest.py  smoke.py  test_cli.py  test_fetching.py  test_parsing.py  test_rendering.py  test_urls.py  test_writing.py
tests/fixtures/: handbook-git.html  section-edge-cases.html  section-no-h1.html  section-no-toc.html
